[DT-3863] Report what the run did, and read each row once
The report described work the run had not necessarily done.

matchesRecomputed came from whatever the last attempt returned, and a retry
skips the DARs the first attempt already rebuilt, so a partially successful
dataset undercounted and a dataset that failed on its last DAR reported zero
while its earlier ones had been replaced. The count now comes from the growth
of the run's rebuilt set, and is credited whether or not the dataset went on to
fail. Reverting either half fails the two new tests.

processed counted every dataset that raised no exception, including one whose
DARs a previous candidate had already rebuilt and one that had none left to
reach - documented as "datasets whose matches were recomputed". It now says
what it counts, and unchanged reports the subset that rebuilt nothing, which
processed alone could not distinguish.

isComplete could not return false for any report run() produces: it compared
processed + failed against a count that is their sum by construction. Deleted,
with percentage, reconcilesWith and findRowsNeedingMatchRecompute, none of
which had a production caller. leftClassificationsUnchanged had none either,
which left the invariant the spec advertises checkable only by eye; the run
evaluates it now and warns when a recompute-only run moved a record.
findNoncanonicalRows is inlined into findNoncanonicalViews, so rows carrying
the raw value no longer leave the service at all.

Each row's data_use was parsed about eight times per run: three times per
report, twice per report because the report is built twice, and twice more
selecting candidates. The report classifies each row once and asks that parse
every question, and candidate selection is one partition over one parse, which
also removes the duplicated two-step abstaining filter.

PersistedDataUseReport now copies the maps it is given, as its sibling copies
its list - order-preserving copies, since the counts are deliberately o